# raquentin

./: .ghc.environment.x86_64-linux-9.8.2  .gitignore  Cargo.toml  README.md  clash-audio.cabal  package-lock.json  package.json
clash_audio/: .gitignore  README.md  cabal.project  hie.yaml
clash_audio/examples/dynamic_gain/: create_vivado.tcl
clash_audio/src/Amplifiers/: DynamicGain.hi  StaticGain.hs
clash_audio/tests/: doctests.hs
client/: .env  README.md  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/about/: About.js
client/src/activity/: Activity.js
client/src/app/: AnimationLayout.js  App.js  Contexts.js  Divider.js  InlineLink.js  Link.js  LinkNav.js  Nav.js  NavIcon.js  PageContainer.js  ThemeLink.js  app.css
client/src/common/: InlineDownloadLink.js  InlinePageLink.js  TextStyles.js
client/src/contact/: Contact.js
client/src/posts/: Posts.js
client/src/projects/: Projects.js
client/src/resume/: Resume.js
client/src/russian/: Russian.js
client/src/schedule/: Schedule.js
codeforces/: templ.cpp
codeforces/solns/: a.out  a_plus_b_again.hs  bit_plus_plus.hs  card_game.hs  chat_room.hs  closest_point.cpp  cp  distanced_coloring.cpp  find_k_distinct_points_with_fixed_center.hs  game_with_doors.cpp  generate_permutation.cpp  guess_the_tree.cpp  make_all_equal.cpp  next_round.hs  strong_password.hs  team.hs  theatre_square.hs  watermelon.hs  way_too_long_words.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.8.2/: clash-audio-0.1-inplace.conf  package.cache
dotfiles/: .zshrc  setup.sh
dotfiles/.config/gcloud/: .last_survey_prompt.yaml  .last_update_check.json  access_tokens.db  credentials.db
dotfiles/.config/gh/: hosts.yml
dotfiles/.config/nvim/: init.lua  lazy-lock.json
dotfiles/manual/: vimium-options.json
dyck/: Cargo.toml
dyck-derive/: Cargo.toml
dyck-derive/src/: lib.rs
dyck/dyck-derive/src/: lib.rs
dyck/dyck/tests/: core.rs
dyck/examples/: create_and_check.rs  find_longest_valid_prefix.rs
dyck/src/: lib.rs
dyck/tests/: enums.rs
entitled.exe/: .gitignore  Cargo.toml  README.md
entitled.exe/src/: utils.rs
examples/: create_and_check.rs  find_longest_valid_prefix.rs  is_dyck_word.rs
new/: package-lock.json  package.json
new/src/: App.js  index.js
new/src/common/: CenterCont.js  (+3 more)
old/: package.json  svelte.config.js
old/static/: static.css
portfolio/: README.md  package.json
portfolio/src/: app.html
public/: index.html
repl/cpp/: templ  templ.cpp
repl/haskell/: Impl.hs
server/: .env  index.js  package-lock.json  package.json
server/chatbot/: bot.py  make_data.py
src/: App.js  app.html  index.js  lib.rs  main.rs  utils.rs
src/Amplifiers/: DynamicGain.hs  Gain.hs
src/apps/: AppCard.js  Contributor.js  ViewSource.js  data.json  page.js
src/common/: CenterCont.js  PLink.js  TitleSplit.js  TopCont.js  global.css
src/comps/: Card.svelte  ContentCenter.svelte  ContentTop.svelte  Header.svelte  PageTrans.svelte
src/contact/: ContactLink.js  page.js
src/daily/: page.js
src/landing/: PageLink.js  page.js
src/resume/: page.js
src/routes/: +layout.svelte  +page.svelte  __error.svelte  __layout.svelte  contact.svelte  index.svelte  resume.svelte
static/: static.css
tests/: core.rs  lib.rs  unittests.hs
(+38 files in other folders)
