[package]
name = "entitled-exe"
version = "0.1.0"
authors = ["Race Williams <race@racewilliams.com"]
description = "Satisfy \"GIMME .EXE\" script kiddies with an executable linking to your GitHub repo." 
license = "MIT"
repository = "https://github.com/r4c3/entitled-exe"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
dialoguer = "0.11.0"
tempfile = "3.10.0"
webbrowser = "0.8.12"
zip = "0.6.6"

[[bin]]
name = "entitled-exe"
path = "src/main.rs"
