[package]
name = "entitled-exe"
version = "0.3.0"
authors = ["Race Williams <race@racewilliams.com"]
description = "Script kiddies whining about no compiled binaries? Troll them with an exe that opens GitHub."
license = "MIT"
repository = "https://github.com/r4c3/entitled-exe"
edition = "2021"

[dependencies]
dialoguer = "0.11.0"
tempfile = "3.10.0"
zip = "0.6.6"

[[bin]]
name = "entitled-exe"
path = "src/main.rs"
