[package]
name = "dyck-derive"
version = "0.1.0"
edition = "2021"
authors = ["Race Williams <race@raquent.in>"]
repository = "https://github.com/raquentin/dyck"
documentation = "https://docs.rs/dyck-derive"
keywords = ["dyck", "spa", "grammar", "proc-macro"]
license = "MIT"
description = "A procedural macro to derive the DyckToken trait on a post-lexer Token enum for use in running Dyck and InterDyck algorithms."
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"
syn = "2.0.58"
